Update requirements.txt with ipython for nbsphinx syntax highlighting

--- a/blog/lire_meteofrance.ipynb
+++ b/blog/lire_meteofrance.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "raw",
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "raw",
+     "raw_mimetype": "text/restructuredtext"
     }
    },
    "source": [
