change date format

--- a/blog/lire_meteofrance.ipynb
+++ b/blog/lire_meteofrance.ipynb
@@ -10,13 +10,13 @@
   {
    "cell_type": "raw",
    "metadata": {
+    "raw_mimetype": "text/restructuredtext",
     "vscode": {
-     "languageId": "raw",
-     "raw_mimetype": "text/restructuredtext"
+     "languageId": "raw"
     }
    },
    "source": [
-    ".. post:: 21 mai 2024\n",
+    ".. post:: May 21, 2024\n",
     "   :tags: how-to\n",
     "   :author: Antoine Tavant\n",
     "   :language: fr"
